# cmake_boilerplate

./: CMakeLists.txt  README.md  build.sh
cmake/: Packages.cmake  ProjectSetup.cmake  Targets.cmake
example/: CMakeLists.txt
example/exec1/: CMakeLists.txt  exec1.cc
example/exec2/: CMakeLists.txt  exec2.cc
example/lib1/: CMakeLists.txt  lib1.cc  lib1.h
example/lib2/: CMakeLists.txt  lib2.cc  lib2.h
